--- a/Style/style.css
+++ b/Style/style.css
@@ -15,6 +15,8 @@ body{
 }
 
 
+
+
 /** HEADER Y MENU **/
 
 .header {
@@ -112,7 +114,63 @@ body{
     margin-bottom: 25px;
 }
 
-/** BOTON **/
+/**boton busqueda **/
+
+
+.busqueda {
+
+    position: relative;
+
+
+}
+
+input {
+
+    padding: 5px;
+    padding-right: 25px;
+    border-radius: 5px 5px 5px  5px;
+    border: 0;
+    outline: none;
+    background-color: #e1e2e6;
+
+}
+
+.botonbuscar {
+
+    background-color:#414247;
+    width: 31px;
+    height: 31px;
+    padding: 10px;
+}
+
+.botoncarrito {
+
+    background-color: #414247;
+    width: 31px;
+    height: 31px;
+    padding: 10px;
+}
+/**Boton Inicio y registro de cuenta **/
+
+.btn-datos {
+
+    background-color: #e1e2e6;
+    width: 120px;
+    height: 40px;
+    color: #414147;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 8px;
+}
+
+.btn-1 a {
+
+    color: blue;
+    text-decoration: none;
+}
+
+
+/** BOTON Informacion **/
 
 .btn-1 {
 
