--- a/Style/Instrumentos.css
+++ b/Style/Instrumentos.css
@@ -14,6 +14,28 @@ body{
     background-color: whitesmoke;
 }
 
+.btn-inicio{
+
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background-color: #CE967B ;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 0 1px 10px rgba(0, 0, 0,0.3);
+    z-index: 100;
+}
+
+.btn-inicio:hover {
+
+    text-decoration: none;
+    
+}
 
 /*HEADER Y MENU */
 
@@ -112,6 +134,7 @@ body{
 .busqueda {
 
     position: relative;
+    margin-left: -50px;
 
 
 }
@@ -148,19 +171,19 @@ input {
 
 .btn-datos {
 
-    background-color: #e1e2e6;
-    width: 120px;
-    height: 40px;
-    color: #414147;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 8px;
+    display: inline-block;
+    padding: 5px 5px;
+    background-color: #CE967B;
+    color: #f9fafc;
+    text-decoration: none;
+    border-radius: 3%;
 }
 
-.btn-1 a {
+.btn-1:hover {
 
-    color: blue;
-    text-decoration: none;
+    background-color: #ebad8d;
+    
+    
 }
 
 
@@ -661,4 +684,22 @@ p {
         flex-direction: column;
         text-align: center;
     }
+}
+
+#carrito-content p {
+    margin: 5px 0;
+}
+
+.btnEliminar {
+    margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #ff6347;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btnEliminar:hover {
+    background-color: #cc0000;
 }
