--- a/Style/style.css
+++ b/Style/style.css
@@ -14,7 +14,28 @@ body{
     background-color: whitesmoke;
 }
 
+.btn-inicio{
 
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background-color: #CE967B ;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 0 1px 10px rgba(0, 0, 0,0.3);
+    z-index: 100;
+}
+
+.btn-inicio:hover {
+
+    text-decoration: none;
+    
+}
 
 
 /** HEADER Y MENU **/
@@ -120,53 +141,58 @@ body{
 .busqueda {
 
     position: relative;
+    margin-left: -50px;
 
 
 }
 
 input {
 
+    margin: 12px;
     padding: 5px;
     padding-right: 25px;
     border-radius: 5px 5px 5px  5px;
     border: 0;
     outline: none;
-    background-color: #e1e2e6;
+    background-color: white;
+    color: white;
 
 }
 
 .botonbuscar {
 
-    background-color:#414247;
+    background-color:#CE967B;
     width: 31px;
     height: 31px;
     padding: 10px;
+    color: white;
 }
 
 .botoncarrito {
 
-    background-color: #414247;
+    background-color: #CE967B;
     width: 31px;
     height: 31px;
     padding: 10px;
+    color: white;
 }
 /**Boton Inicio y registro de cuenta **/
 
 .btn-datos {
 
-    background-color: #e1e2e6;
-    width: 120px;
-    height: 40px;
-    color: #414147;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 8px;
+    display: inline-block;
+    padding: 5px 5px;
+    background-color: #CE967B;
+    color: #f9fafc;
+    text-decoration: none;
+    border-radius: 3%;
 }
 
-.btn-1 a {
+.btn-1:hover {
 
-    color: blue;
-    text-decoration: none;
+    background-color: #ebad8d;
+    
+    
 }
 
 
